<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- REST API Server URLs -->
    <string name="server_ip">165.246.43.163</string><!-- SR PC IP: 165.246.43.163 -->
    <string name="server_port">8765</string><!-- SR PC PORT: 8765 -->
    <string name="url_user_register">http://%1$s/user/register</string>
    <string name="url_user_login">http://%1$s/user/login</string>
    <string name="url_heartbeat">http://%1$s/user/heartbeat_smartphone</string>
    <string name="url_usr_stat">http://%1$s/user/get_user_stat</string>
    <string name="url_sensor_data_submit">http://%1$s/sensor_data/submit</string>
    <string name="url_usage_stats">http://%1$s/sensor_data/app_usage_stats</string>
    <string name="url_ema_submit">http://%1$s/ema/submit</string>
    <string name="get_mood_data">http://%1$s/get_mood_data/</string>
    <string name="url_audio_submit">http://%1$s/submit_audio</string>
    <string name="url_location_submit">http://%1$s/sensor_data/locations_submit</string>

    <string name="app_name">StressSensor</string>
    <string name="ConnectionEstablishedMsg">Connection established</string>
    <string name="ConnectionTerminateddMsg">Connection terminated</string>
    <string name="ConnectionAlreadyExist">Already connected</string>
    <string name="ConnectionDoesNotExists">Connection doesn\'t exist</string>
    <string name="ConnectionFailure">Connection failure occurred</string>
    <string name="NoPeersFound">No peers found</string>
    <string name="buttonConnect">Connect Device</string>
    <string name="buttonDisconnect">Disconnect Device</string>
    <string name="buttonSend">Send</string>
    <string name="dummy">Dummy</string>
    <string name="status">Status for today:</string>
    <string name="configurations">Configurations</string>
    <string name="view_db_smartphone">View DB - Smartphone</string>
    <string name="view_db_wearable">View DB - Wearable</string>
    <string name="sm_watch">sm_watch</string>
    <string name="sm_phone">sm_phone</string>
    <string name="database">Database</string>
    <string name="sensor_data">Sensor data will be displayed here…</string>
    <string name="refresh_window">Refresh window</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="button_start_sensors">start sensors</string>
    <string name="button_stop_sensors">stop sensors</string>
    <string name="sign_in">로그인</string>
    <string name="username">ID</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="not_a_member_yet">아직 회원이 아니신가요?</string>
    <string name="now">now</string>
    <string name="sign_up">회원가입</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_now">회원가입</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="signing_in">Signing in…</string>

    <string name="ema_explanation">* 1(Never) ~ 5(Very Often)</string>

    <string name="ema_question_1">1. 지난 3시간 동안, 초조하거나 스트레스가 쌓인다고 느꼈나요?</string>
    <string name="ema_question_2">2. 지난 3시간 동안, 예상치 못한 일이 생겨서 기분이 나빠졌나요?</string>
    <string name="ema_question_3">3. 지난 3시간 동안 매사를 잘 컨트롤 하고 있다고 느꼈나요?</string>
    <string name="ema_question_4">4. 지난 3시간 동안 짜증나고 성가신 일들을 성공적으로 처리하였나요?</string>

    <string name="ema_done_text">설문을 모두 완료했습니다.\n‘제출’ 버튼을 눌러주세요. :)</string>

    <string name="hour">시간</string>
    <string name="minute">분</string>

    <string name="submit">제출</string>

    <string name="notif_channel_id">sast-notifs</string>
    <string name="daily_notif_text">설문 시간입니다! 설문에 응해주세요 :)</string>
    <string name="smartphone">smartphone</string>
    <string name="smartwatch">smartwatch</string>
    <string name="submit_to_server">Submit to Server</string>
    <string name="uploading">Uploading…</string>
    <string name="files_from_watch_transfer_status">Files coming from watch</string>
    <string name="view_files">View files</string>
    <string name="next">다음</string>

    <string name="day_num">Day number: %1$d</string>
    <string name="ema_responses">EMA responses: %1$d/6</string>
    <string name="data_loaded">Data loaded:  %1$s MB</string>
    <string name="last_active">Last active:  %1$s</string>


    <string name="responses_delimiter">&#160;</string>
    <string name="restart_data_collection">재시작 버튼</string>
    <string name="set_locations">장소 설정</string>
    <string name="stop_data_collection">Stop</string>
    <string name="upload_sensor_data">Upload</string>
    <string name="service_runnig">Service: Running :)</string>
    <string name="service_stopped">Service: Not running :(</string>

    <string name="file_count">Total files number: %1$d</string>

    <string name="internet_on">Internet: Connected :)</string>
    <string name="internet_off">Internet: Not connected :(</string>
    <string name="update_stats">Update</string>
    <string name="no_data">No data</string>
    <string name="log_out">로그 아웃</string>
    <string name="mood_history_graph">EMA: Mood history\n(x=EMA#, y=mood)</string>
    <string name="set_home_location">집</string>
    <string name="set_dorm_location">기숙사</string>
    <string name="set_university_location">학교</string>
    <string name="set_library_location">도서관</string>
    <string name="set_additional_location">기타 장소</string>
    <string name="title_activity_map">Map</string>
    <string name="start_audio_recording">Start audio recording</string>
    <string name="stop_audio_recording">Stop audio recording</string>


</resources>