<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@color/white"    android:orientation="vertical"    tools:context=".MainActivity">    <RelativeLayout        android:id="@+id/loadingPanel"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:visibility="gone">        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_above="@+id/progressBar"            android:layout_centerHorizontal="true"            android:layout_marginBottom="20dp"            android:text="@string/uploading"            android:textColor="@android:color/black"            android:textSize="30sp" />        <ProgressBar            android:id="@id/progressBar"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_centerInParent="true"            android:indeterminate="true" />    </RelativeLayout>    <Toolbar        android:id="@+id/my_toolbar"        android:layout_width="match_parent"        android:layout_height="?android:actionBarSize"        android:layout_alignParentTop="true"        android:background="@color/colorPrimary"        android:elevation="4dp"        android:gravity="center_horizontal"        android:titleTextColor="@color/colorPrimaryDark"        app:title="@string/app_name"        tools:targetApi="m" />    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout        android:id="@+id/pullToRefresh"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_below="@id/my_toolbar">        <RelativeLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:orientation="vertical">            <LinearLayout                android:id="@+id/topLinearLayout"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:gravity="center_horizontal"                android:orientation="vertical"                android:paddingTop="10dp">                <TextView                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:text="@string/status"                    android:textAllCaps="true"                    android:textColor="@color/colorPrimaryDark"                    android:textSize="14sp"                    android:textStyle="bold" />                <TextView                    android:id="@+id/tvStatus"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:gravity="center"                    android:text="@string/dummy"                    android:textAlignment="center"                    android:textColor="@color/black"                    android:textSize="@dimen/question_txt_big_size"                    android:textStyle="bold" />                <TextView                    android:id="@+id/connectivityStatus"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:gravity="center_horizontal"                    android:text="@string/dummy"                    android:textColor="@color/black"                    android:textSize="@dimen/question_txt_big_size"                    android:textStyle="bold" />            </LinearLayout>            <TextView                android:id="@+id/filesCountTextView"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@id/topLinearLayout"                android:gravity="center_horizontal"                android:text="@string/dummy"                android:textColor="@color/black"                android:textSize="@dimen/question_txt_size"                android:visibility="gone" />            <View                android:layout_width="fill_parent"                android:layout_height="0.5dp"                android:layout_above="@+id/txt_day_num"                android:background="#c0c0c0" />            <TextView                android:id="@+id/txt_day_num"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@id/topLinearLayout"                android:layout_marginTop="7dp"                android:layout_marginBottom="7dp"                android:gravity="center"                android:text="@string/dummy"                android:textColor="@color/black"                android:textSize="@dimen/question_txt_title_size"                android:textStyle="bold" />            <View                android:layout_width="fill_parent"                android:layout_height="0.5dp"                android:layout_below="@+id/txt_day_num"                android:background="#c0c0c0" />            <Button                android:id="@+id/btn_late_ema"                style="@style/Widget.AppCompat.Button.Colored"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@id/txt_day_num"                android:layout_marginStart="30dp"                android:layout_marginEnd="30dp"                android:onClick="lateEMAClick"                android:text="answer last EMA"                android:textSize="@dimen/question_txt_size"                android:textStyle="bold" />            <View                android:layout_width="fill_parent"                android:layout_height="0.5dp"                android:layout_below="@+id/btn_late_ema"                android:background="#c0c0c0" />            <LinearLayout                android:id="@+id/view_phone"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@id/btn_late_ema"                android:layout_marginTop="10dp"                android:layout_marginBottom="10dp"                android:orientation="horizontal"                android:padding="5dp">                <TextView                    android:id="@+id/img_phone"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:drawableBottom="@drawable/smartphone"                    android:gravity="center"                    android:text="Smartphone"                    android:textColor="@color/black"                    android:textSize="@dimen/question_txt_title_size"                    android:textStyle="bold" />                <LinearLayout                    android:layout_width="match_parent"                    android:layout_height="match_parent"                    android:layout_marginStart="15dp"                    android:gravity="center"                    android:orientation="vertical">                    <TextView                        android:id="@+id/heartbeat_phone"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:text="@string/dummy"                        android:textColor="@color/black"                        android:textSize="@dimen/question_txt_size"                        android:textStyle="bold" />                    <TextView                        android:id="@+id/ema_responses_phone"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:layout_marginTop="10dp"                        android:text="@string/dummy"                        android:textColor="@color/black"                        android:textSize="@dimen/question_txt_size"                        android:textStyle="bold"                        android:visibility="gone" />                    <TextView                        android:id="@+id/data_loaded_phone"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:layout_marginTop="10dp"                        android:text="@string/dummy"                        android:textColor="@color/black"                        android:textSize="@dimen/question_txt_size"                        android:textStyle="bold" />                </LinearLayout>            </LinearLayout>            <View                android:layout_width="fill_parent"                android:layout_height="0.5dp"                android:layout_below="@+id/view_phone"                android:background="#c0c0c0" />            <TextView                android:id="@+id/ema_responses"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@+id/view_phone"                android:layout_marginTop="10dp"                android:gravity="center"                android:text="EMA responses"                android:textColor="@color/black"                android:textSize="@dimen/question_txt_title_size"                android:textStyle="bold" />            <LinearLayout                android:id="@+id/ema_checkbox"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@+id/ema_responses"                android:gravity="center"                android:orientation="horizontal">                <TextView                    android:id="@+id/ema_tv_8"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginStart="15dp"                    android:layout_marginTop="10dp"                    android:layout_marginEnd="10dp"                    android:drawableTop="@drawable/checked_box"                    android:gravity="center"                    android:paddingBottom="10dp"                    android:scrollbarSize="@dimen/question_txt_title_size"                    android:text="08:00"                    android:textColor="@color/black"                    android:textStyle="bold" />                <TextView                    android:id="@+id/ema_tv_11"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginTop="10dp"                    android:layout_marginEnd="8dp"                    android:drawableTop="@drawable/unchecked_box"                    android:gravity="center"                    android:paddingBottom="10dp"                    android:scrollbarSize="@dimen/question_txt_title_size"                    android:text="11:00"                    android:textColor="@color/black"                    android:textStyle="bold" />                <TextView                    android:id="@+id/ema_tv_14"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginTop="10dp"                    android:layout_marginEnd="8dp"                    android:drawableTop="@drawable/unchecked_box"                    android:gravity="center"                    android:paddingBottom="10dp"                    android:scrollbarSize="@dimen/question_txt_title_size"                    android:text="14:00"                    android:textColor="@color/black"                    android:textStyle="bold" />                <TextView                    android:id="@+id/ema_tv_17"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginTop="10dp"                    android:layout_marginEnd="8dp"                    android:drawableTop="@drawable/unchecked_box"                    android:gravity="center"                    android:paddingBottom="10dp"                    android:scrollbarSize="@dimen/question_txt_title_size"                    android:text="17:00"                    android:textColor="@color/black"                    android:textStyle="bold" />                <TextView                    android:id="@+id/ema_tv_20"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginTop="10dp"                    android:layout_marginEnd="8dp"                    android:drawableTop="@drawable/unchecked_box"                    android:gravity="center"                    android:paddingBottom="10dp"                    android:scrollbarSize="@dimen/question_txt_title_size"                    android:text="20:00"                    android:textColor="@color/black"                    android:textStyle="bold" />                <TextView                    android:id="@+id/ema_tv_23"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginTop="10dp"                    android:layout_marginEnd="8dp"                    android:drawableTop="@drawable/unchecked_box"                    android:gravity="center"                    android:paddingBottom="10dp"                    android:scrollbarSize="@dimen/question_txt_title_size"                    android:text="23:00"                    android:textColor="@color/black"                    android:textStyle="bold" />            </LinearLayout>        </RelativeLayout>    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>    <!--Layout with buttons -->    <Button        android:id="@+id/btn_viewFiles"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:onClick="viewFiles"        android:text="@string/view_files"        android:textAllCaps="true"        android:textSize="24sp"        android:textStyle="bold"        android:visibility="gone" />    <LinearLayout        android:id="@+id/bottomLinearLayout"        style="?android:buttonBarStyle"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_alignParentBottom="true"        android:background="@color/colorPrimary">        <Button            style="?android:buttonBarButtonStyle"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_weight="1"            android:drawableTop="@drawable/ic_stop"            android:onClick="stopService"            android:text="@string/stop_data_collection"            android:textColor="@android:color/white"            android:visibility="gone" />        <Button            style="?android:buttonBarButtonStyle"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_weight="1"            android:drawableTop="@drawable/ic_upload"            android:onClick="submitFilesToServer"            android:text="@string/upload_sensor_data"            android:textColor="@android:color/white"            android:visibility="gone" />    </LinearLayout></RelativeLayout>